--- a/src/coreclr/tests/src/Common/test_dependencies/test_dependencies.csproj
+++ b/src/coreclr/tests/src/Common/test_dependencies/test_dependencies.csproj
@@ -11,17 +11,16 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Private.CoreFx.NETCoreApp">
-      <Version>$(CoreFxPackageVersion)</Version>
+      <Version>$(MicrosoftPrivateCoreFxNETCoreAppPackageVersion)</Version>
     </PackageReference>
     <PackageReference Include="System.Memory">
-      <Version>$(CoreFxPackageVersion)</Version>
+      <Version>$(MicrosoftPrivateCoreFxNETCoreAppPackageVersion)</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>$(CoreFxPackageVersion)</Version>
+      <Version>$(MicrosoftPrivateCoreFxNETCoreAppPackageVersion)</Version>
     </PackageReference>
     <PackageReference Include="System.Security.Permissions">
-      <Version>$(CoreFxPackageVersion)</Version>
-    </PackageReference>
+      <Version>$(MicrosoftPrivateCoreFxNETCoreAppPackageVersion)</Version>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
