--- a/src/libraries/src/System.ServiceModel.Syndication/tests/System.ServiceModel.Syndication.Tests.csproj
+++ b/src/libraries/src/System.ServiceModel.Syndication/tests/System.ServiceModel.Syndication.Tests.csproj
@@ -7,8 +7,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='netstandard-Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='netstandard-Release|AnyCPU'" />
   <ItemGroup>
-    <Compile Include="$(MsBuildThisFileDirectory)\**\*.cs" />
-    <Compile Remove="$(MsBuildThisFileDirectory)async\**\*.cs" />
+    <Compile Include="$(MsBuildThisFileDirectory)**\*.cs" 
+             Exclude="$(MsBuildThisFileDirectory)async\**\*.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="$(MsBuildThisFileDirectory)\TestFeeds\*.xml">
