Move CoreCLRPackageVersion property useage
Also did some small clean-up:
Fix missing tag from bad merge
Fix spacing in init-tools.sh


Commit migrated from https://github.com/dotnet/coreclr/commit/3c483846130b17c6c3a7d712c139d2195798165e

--- a/src/clr/tests/src/Common/test_dependencies/test_dependencies.csproj
+++ b/src/clr/tests/src/Common/test_dependencies/test_dependencies.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="System.Security.Permissions">
       <Version>$(MicrosoftPrivateCoreFxNETCoreAppPackageVersion)</Version>
+    </PackageReference>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
