--- a/src/libraries/src/System.Management/tests/System.Management.Tests.csproj
+++ b/src/libraries/src/System.Management/tests/System.Management.Tests.csproj
@@ -6,11 +6,28 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netcoreapp-Windows_NT-Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netcoreapp-Windows_NT-Release|AnyCPU'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netfx-Windows_NT-Debug|AnyCPU'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netfx-Windows_NT-Release|AnyCPU'" />
   <ItemGroup>
+    <Compile Include="MofHelpers\MofCollection.cs" />
+    <Compile Include="MofHelpers\MofFixture.cs" />
+    <Compile Include="System\Management\ManagementClassTestsMofRequired.cs" />
     <Compile Include="System\Management\ManagementClassTests.cs" />
     <Compile Include="System\Management\ManagementDateTimeConverterTests.cs" />
+    <Compile Include="System\Management\ManagementEventWatcherTests.cs" />
+    <Compile Include="System\Management\ManagementObjectSearcherTests.cs" />
+    <Compile Include="System\Management\ManagementObjectSearcherTestsMofRequired.cs" />
     <Compile Include="System\Management\ManagementObjectTests.cs" />
     <Compile Include="System\Management\SelectQueryTests.cs" />
+    <Compile Include="WmiTestHelper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\WmiEBvt.mof">
+      <LogicalName>WmiEBvt.mof</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\CleanUp.mof">
+      <LogicalName>CleanUp.mof</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" />
 </Project>
