Add EventCounter to Microsoft.Diagnostics.Tracing.EventSource.Redist (dotnet/corefx#24893)
* Share EventSource tests with Microsoft.Diagnostics.Tracing.EventSource.Redist nuget package.

* Add EventCounter to Microsoft.Diagnostics.Tracing.

* Enable EventCounter tests on Microsoft.Diagnostics.Tracing.


Commit migrated from https://github.com/dotnet/corefx/commit/b87b7d304f85e5adbc665e326ed219bafa7b5eb1

--- a/src/libraries/Microsoft.Diagnostics.Tracing.EventSource.Redist/src/Microsoft.Diagnostics.Tracing.EventSource.Redist.csproj
+++ b/src/libraries/Microsoft.Diagnostics.Tracing.EventSource.Redist/src/Microsoft.Diagnostics.Tracing.EventSource.Redist.csproj
@@ -14,7 +14,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netfx-Windows_NT-Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netfx-Windows_NT-Release|AnyCPU'" />
   <ItemGroup>
-    <!-- <Compile Include="..\..\System.Diagnostics.Tracing\src\System\Diagnostics\Tracing\EventCounter.cs" /> -->
+    <Compile Include="..\..\System.Diagnostics.Tracing\src\System\Diagnostics\Tracing\EventCounter.cs" />
     <Compile Include="*.cs" />
     <Compile Include="..\shared\*.cs" />
     <Compile Include="..\shared\TraceLogging\*.cs" />
