--- a/src/clr/tests/dir.props
+++ b/src/clr/tests/dir.props
@@ -90,6 +90,7 @@
    <ItemGroup> 
      <!-- Need to escape double forward slash (%2F) or MSBuild will normalize to one slash on Unix. -->
      <DotnetSourceList Include="$(IntermediateAzureFeed)" Condition="'$(OverwriteCoreClrPackageVersion)' == 'true'" />
+     <DotnetSourceList Include="https:%2F%2Fdotnetfeed.blob.core.windows.net/dotnet-core/packages/index.json" />
      <DotnetSourceList Include="https:%2F%2Fdotnet.myget.org/F/dotnet-corefxlab/api/v3/index.json" />
      <DotnetSourceList Include="https:%2F%2Fdotnet.myget.org/F/dotnet-core/api/v3/index.json" />
      <DotnetSourceList Include="https:%2F%2Fdotnet.myget.org/F/dotnet-buildtools/api/v3/index.json" /> 
