Suppress NU1603 for the coreruntimetask project
It is using a version of CCI which has dependencies that cannot
be found but the the dependencies it ends up with are newer and work
fine so just suppressing the warning instead of changing to another version
of the CCI package which may have slightly different code changes.


Commit migrated from https://github.com/dotnet/core-setup/commit/1c0329282f5657f8a8be3baadf2880ffdc3e292b

--- a/src/installer/uwp/Microsoft.Build.Net.CoreRuntimeTask/Microsoft.Build.Net.CoreRuntimeTask.csproj
+++ b/src/installer/uwp/Microsoft.Build.Net.CoreRuntimeTask/Microsoft.Build.Net.CoreRuntimeTask.csproj
@@ -5,7 +5,7 @@
     <AllowCrossTargeting>true</AllowCrossTargeting>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
   </PropertyGroup>
-  
+
   <PropertyGroup>
     <ProjectGuid>{49082C55-62B7-4DEC-BC9E-3F57945AC37E}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -18,7 +18,7 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
-    
+
     <!-- turn off CLS compliant check to make it work with CCI code -->
     <AssemblyAttributeClsCompliant>false</AssemblyAttributeClsCompliant>
 
@@ -35,6 +35,7 @@
     <RestoreOutputPath>obj</RestoreOutputPath>
     <AssemblyKey>MSFT</AssemblyKey>
     <RestorePackages>true</RestorePackages>
+    <NoWarn>$(NoWarn);NU1603</NoWarn>
   </PropertyGroup>
   <!-- Default configurations to help VS understand the options -->
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -57,7 +58,7 @@
     <Compile Include="MergePriConfigTask.cs" />
     <Compile Include="MergeResWFilesTask.cs" />
     <Compile Include="ResourceHandlingTask.cs" />
-  </ItemGroup>  
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Cci">
