Add Span<T> Base64 conversion APIs that support UTF-8 (dotnet/corefx#24888)
* Add Span<T> Base64 conversion APIs that support UTF-8.

* Optimize the encoding loop when there is plenty of available space

* Optimize EncodeInPlace and update DecodeBaseline perf test.

* Addressing PR feedback, encode optimization, throw for negative lengths

* Reenable commented out perf tests.

* Cap the amount of data to process based on how much that will fit.

* Being explicit with access modifiers to follow guidelines.


Commit migrated from https://github.com/dotnet/corefx/commit/b7b34392afa430caf03d197789a493fd122db445

--- a/src/libraries/System.Memory/src/System.Memory.csproj
+++ b/src/libraries/System.Memory/src/System.Memory.csproj
@@ -25,12 +25,16 @@
     <Compile Include="System\SpanExtensions.cs" />
     <Compile Include="System\SpanHelpers.T.cs" />
     <Compile Include="System\SpanHelpers.byte.cs" />
+    <Compile Include="System\ThrowHelper.cs" />
+    <Compile Include="System\Buffers\OperationStatus.cs" />
     <Compile Include="System\Buffers\Binary\Reader.cs" />
     <Compile Include="System\Buffers\Binary\ReaderBigEndian.cs" />
     <Compile Include="System\Buffers\Binary\ReaderLittleEndian.cs" />
     <Compile Include="System\Buffers\Binary\Writer.cs" />
     <Compile Include="System\Buffers\Binary\WriterBigEndian.cs" />
     <Compile Include="System\Buffers\Binary\WriterLittleEndian.cs" />
+    <Compile Include="System\Buffers\Text\Base64Decoder.cs" />
+    <Compile Include="System\Buffers\Text\Base64Encoder.cs" />
   </ItemGroup>
   <ItemGroup Condition="'$(IsPartialFacadeAssembly)' != 'true'">
     <Compile Include="System\ReadOnlySpan.cs" />
@@ -39,7 +43,6 @@
     <Compile Include="System\SpanExtensions.Portable.cs" />
     <Compile Include="System\SpanHelpers.cs" />
     <Compile Include="System\Pinnable.cs" />
-    <Compile Include="System\ThrowHelper.cs" />
     <Compile Include="System\SpanHelpers.Clear.cs" />
     <Compile Include="System\Memory.cs" />
     <Compile Include="System\MemoryDebugView.cs" />
