Disable reflection-based debugger System.Threading.Channels tests on uapaot (dotnet/corefx#24956)
Also remove the duplicated DebuggerAttributes.cs file.

Commit migrated from https://github.com/dotnet/corefx/commit/2544e71349ce03259d0141486dc5e2d52716768b

--- a/src/libraries/System.Threading.Channels/tests/System.Threading.Channels.Tests.csproj
+++ b/src/libraries/System.Threading.Channels/tests/System.Threading.Channels.Tests.csproj
@@ -11,11 +11,13 @@
     <Compile Include="ChannelClosedExceptionTests.cs" />
     <Compile Include="ChannelTestBase.cs" />
     <Compile Include="ChannelTests.cs" />
-    <Compile Include="DebuggerAttributes.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="TestExtensions.cs" />
     <Compile Include="UnboundedChannelTests.cs" />
     <Compile Include="UnbufferedChannelTests.cs" />
+    <Compile Include="$(CommonTestPath)\System\Diagnostics\DebuggerAttributes.cs">
+      <Link>Common\System\Diagnostics\DebuggerAttributes.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" />
 </Project>
