Remove private reflection agaist RuntimeWrappedException constructor (dotnet/corefx#24945)
RuntimeWrappedException constructor is public in CoreLib now. It can be called directly.

Commit migrated from https://github.com/dotnet/corefx/commit/778dd1f8766578a3822083287ce819fcd7642d15

--- a/src/libraries/System.Linq.Expressions/tests/System.Linq.Expressions.Tests.csproj
+++ b/src/libraries/System.Linq.Expressions/tests/System.Linq.Expressions.Tests.csproj
@@ -10,7 +10,7 @@
     <IsInterpreting Condition="'$(TargetGroup)' == 'uapaot'">true</IsInterpreting>
     <DefineConstants Condition=" '$(IsInterpreting)' != 'true' ">$(DefineConstants);FEATURE_COMPILE</DefineConstants>
     <DefineConstants Condition=" '$(FeatureInterpret)' == 'true' ">$(DefineConstants);FEATURE_INTERPRET</DefineConstants>
-    <IncludeDefaultReferences Condition="'$(TargetGroup)'=='uapaot'">false</IncludeDefaultReferences>
+    <IncludeDefaultReferences>false</IncludeDefaultReferences>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netcoreapp-Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netcoreapp-Release|AnyCPU'" />
@@ -22,7 +22,7 @@
     <TargetingPackExclusions Include="System.Linq.Expressions" />
     <ReferenceFromRuntime Include="System.Linq.Expressions" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetGroup)' == 'uapaot'">
+  <ItemGroup>
     <ReferenceFromRuntime Include="System.Private.CoreLib" />
     <ReferenceFromRuntime Include="CoreFx.Private.TestUtilities" />
     <ReferenceFromRuntime Include="xunit.core" />
@@ -48,7 +48,7 @@
     <ReferenceFromRuntime Include="System.IO.FileSystem" />
     <ReferenceFromRuntime Include="System.Runtime.InteropServices.RuntimeInformation" />
     <ReferenceFromRuntime Include="System.Runtime.InteropServices" />
-    <ReferenceFromRuntime Include="System.Private.Interop" />
+    <ReferenceFromRuntime Include="System.Private.Interop" Condition="'$(TargetGroup)' == 'uapaot'" />
     <ReferenceFromRuntime Include="netstandard" />
   </ItemGroup>
   <ItemGroup>
