Clean up YieldProcessorNormalized (dotnet/coreclr#14739)
Move YieldProcessorNormalized into separate files

Clean up YieldProcessorNormalized

Commit migrated from https://github.com/dotnet/coreclr/commit/0bbce0cd3bf5f1e811e727d3922fade3b3b87a03

--- a/src/clr/src/vm/CMakeLists.txt
+++ b/src/clr/src/vm/CMakeLists.txt
@@ -116,6 +116,7 @@ set(VM_SOURCES_DAC_AND_WKS_COMMON
     versionresilienthashcode.cpp
     virtualcallstub.cpp
     win32threadpool.cpp
+    yieldprocessornormalized.cpp
     zapsig.cpp
 )
 
