Updating xUnit Benchmark Scenarios to capture Etw with Pmc support. (dotnet/coreclr#14734)
- Adding 'tiered' jitting
- Enable JitBench to capture Pmc data (Profile=On)
- Fixed some xUnit performance warnings
- Enforce DOTNET_MULTILEVEL_LOOKUP environment to be turned off
- Specify `dotnet publish` output directory.


Commit migrated from https://github.com/dotnet/coreclr/commit/404304a16f117cd7ead322433e96162a689e8d88

--- a/src/clr/tests/src/JIT/config/benchmark+serialize/benchmark+serialize.csproj
+++ b/src/clr/tests/src/JIT/config/benchmark+serialize/benchmark+serialize.csproj
@@ -23,7 +23,7 @@
       <Version>$(MicrosoftDiagnosticsTracingTraceEventPackageVersion)</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.Platforms">
-      <Version>2.0.0-preview2-25302-03</Version>
+      <Version>$(MicrosoftNETCorePlatformsPackageVersion)</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>7.0.1</Version>
