Add Microsoft.Windows.Compatibility.Shims package and rename compat pack (dotnet/corefx#24967)
* Add Microsoft.NETFramework.Compatibility.Shims package and fix package versions in Compat pack

* PR Feedback

* Add System.Management and System.DirectoryServices packages into compat pack

* Add netstandard 2.0 placeholder file and depend on S.S.Cryptography.Cng stable package

* Rename compat and shims packages, also update descriptions and PR Feedback


Commit migrated from https://github.com/dotnet/corefx/commit/1100d8faa87656f447bfe8944686d13e7b3af5e9

--- a/src/libraries/dependencies.props
+++ b/src/libraries/dependencies.props
@@ -169,6 +169,7 @@
 
   <PropertyGroup>
     <XUnitPackageVersion>2.3.0-beta1-build3642</XUnitPackageVersion>
+    <CompatibilityShimsPackageVersion>2.0.0</CompatibilityShimsPackageVersion>
   </PropertyGroup>
 
   <!-- Set up dependencies on packages that aren't found in a BuildInfo. -->
